--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,9 @@
     <div style="width: 70%; margin: auto">
         <div style="text-align: center;">
             <h1>NBroadcast ~ Crazy fast broadcast message</h1>
+            <a href="https://github.com/herudi/nbroadcast" target="_blank">Github</a>
+            <br/>
+            <br/>
             <button onclick="onGenerate()">Generate Key</button>
             <a href="/sample/live-news" target="_blank">Sample site</a>
             <h3 id="key"></h3>
