--- a/client/live-news.html
+++ b/client/live-news.html
@@ -50,6 +50,9 @@
             <label><i>Simple app live news real time. please open new browser to monitor.</i></label>
             <br />
             <br />
+            <a href="https://github.com/herudi/nbroadcast" target="_blank">Github</a>
+            <br />
+            <br />
             <input style="font-size: 16px; width: 80%; height: 40px;" placeholder="News title" id="title" />
             <button style="height: 40px;" onclick="onPostNews()">POST</button>
         </div>
